--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,19 @@
 <nav>
-  <div class="nav-wrapper blue-grey lighten-5">
+  <div class="nav-wrapper blue-grey lighten-5 ">
     <a href="/" class="brand-logo"><%= image_tag 'logo', :class => 'logo' %></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="/projects">Projects</a></li>
-      <li><a href="/employees">Employees</a></li>
-      <li><a href="/overview">Overview</a></li>
+    <ul id="nav-mobile" class="right hide-on-med-and-down ">
+      <li><a class="grey-text text-darken-1" href="/projects">Projects</a></li>
+      <li><a class="grey-text text-darken-1" href="/employees">Employees</a></li>
+      <li><a class="grey-text text-darken-1" href="/overview">Overview</a></li>
+      <% if user_signed_in? %>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+        </li>
+      <% else %>
+        <li>
+        <%= link_to('Login', new_user_session_path)  %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
