--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s4 offset-s4">
+  <div class="col s12 offset-m4 m4 ">
     <div class="card">
       <div class="card-content">
         <span class="card-title">Sign Up</span>
@@ -11,7 +11,6 @@
           <%= f.label :email %><br/>
           <%= f.email_field :email, autofocus: true %>
         </div>
-
         <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
@@ -20,13 +19,11 @@
           <% end %><br/>
           <%= f.password_field :password, autocomplete: "off" %>
         </div>
-
         <div class="field">
           <%= f.label :password_confirmation %><br/>
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
         </div>
         <div class="actions">
-
           <%= f.submit "Sign up" %>
         </div>
         <% end %>
