--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,10 +2,12 @@
   <div class="nav-wrapper blue-grey lighten-5 ">
     <a href="/" class="brand-logo"><%= image_tag 'logo', :class => 'logo' %></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down ">
+      <% if user_signed_in? %>
+      <% if current_user.has_role? :admin %>
       <li><a class="grey-text text-darken-1" href="/projects">Projects</a></li>
       <li><a class="grey-text text-darken-1" href="/employees">Employees</a></li>
       <li><a class="grey-text text-darken-1" href="/overview">Overview</a></li>
-      <% if user_signed_in? %>
+      <% end %>
         <li>
         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
         </li>
