--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,8 +5,7 @@
       <% if user_signed_in? %>
       <% if current_user.has_role? :admin %>
       <li><a class="grey-text text-darken-1" href="/projects">Projects</a></li>
-      <li><a class="grey-text text-darken-1" href="/employees">Employees</a></li>
-      <li><a class="grey-text text-darken-1" href="/overview">Overview</a></li>
+      <li><a class="grey-text text-darken-1" href="/admin">Employees</a></li>
       <% end %>
         <li>
         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
