--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,12 @@
  *= require_tree .
  *= require_self
  */
+ html,
+ body{
+   margin: 0;
+   padding: 0;
+   height: 100%;
+ }
 .logo{
   margin-top: 15px;
   max-width: 120px;
@@ -29,6 +35,7 @@
 }
 #content{
   margin-top: 20px;
+  min-height: 90%;
 }
 .hide-on-med-and-down{
   li{
