--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <div id="content">
       <%= yield %>
     </div>
+    <%= render "layouts/footer" %>
     <script type="text/javascript">
     $('.datepicker').pickadate({
 selectMonths: true, // Creates a dropdown to control month
