--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,23 @@
 <nav>
   <div class="nav-wrapper blue-grey lighten-5 ">
     <a href="/" class="brand-logo"><%= image_tag 'logo', :class => 'logo' %></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down ">
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul  class="right hide-on-med-and-down ">
+      <% if user_signed_in? %>
+      <% if current_user.has_role? :admin %>
+      <li><a class="grey-text text-darken-1" href="/projects">Projects</a></li>
+      <li><a class="grey-text text-darken-1" href="/admin">Employees</a></li>
+      <% end %>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+        </li>
+      <% else %>
+        <li>
+        <%= link_to('Login', new_user_session_path)  %>
+        </li>
+      <% end %>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
       <% if user_signed_in? %>
       <% if current_user.has_role? :admin %>
       <li><a class="grey-text text-darken-1" href="/projects">Projects</a></li>
